--- a/.github/workflows/codeowner-merging.yaml
+++ b/.github/workflows/codeowner-merging.yaml
@@ -4,8 +4,14 @@ on:
   issue_comment: { types: [created] }
   pull_request_review: { types: [submitted] }
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  actions: read
+
 jobs:
-  build:
+  check:
     runs-on: ubuntu-latest
 
     steps:
