--- a/.github/workflows/astro-build.yaml
+++ b/.github/workflows/astro-build.yaml
@@ -36,6 +36,7 @@ jobs:
         run: |
           set -o pipefail
           pnpm build 2>&1 | tee build.log
+        continue-on-error: true
 
       - name: Post failure to PR
         if: steps.build.outcome == 'failure' && github.event_name == 'pull_request'
@@ -59,4 +60,8 @@ jobs:
               repo: context.repo.repo,
               body: comment
             });
+
+      - name: failure
+        if: steps.build.outcome == 'failure'
+        run: exit 1
 
