--- a/.github/workflows/codeowner-merging.yaml
+++ b/.github/workflows/codeowner-merging.yaml
@@ -1,8 +1,19 @@
 name: Codeowners merging
 on:
-  pull_request_target: { types: [opened] }
-  issue_comment: { types: [created] }
-  pull_request_review: { types: [submitted] }
+  pull_request_target:
+    types:
+      - opened
+      - reopened
+      - synchronize
+  issue_comment:
+    types:
+      - created
+  pull_request_review:
+    types:
+      - submitted
+
+permissions:
+  pull-requests: write
 
 jobs:
   check:
@@ -10,6 +21,53 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build with Astro
+        id: build
+        run: |
+          set -o pipefail
+          pnpm build 2>&1 | tee build.log
+        continue-on-error: true
+
+      - name: Post failure to PR
+        if: steps.build.outcome == 'failure'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const log = fs.readFileSync('build.log', 'utf8');
+            const truncated = log.length > 6500 ? log.slice(-6500) : log;
+            const comment = [
+              '🚨 **Astro build failed**',
+              '',
+              '```',
+              truncated,
+              '```'
+            ].join('\n');
+            
+            github.rest.issues.createComment({
+              issue_number: context.payload.pull_request.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
+
+      - name: failure
+        if: steps.build.outcome == 'failure'
+        run: exit 1
 
       - uses: actions/create-github-app-token@v2
         id: app-token
@@ -21,3 +79,4 @@ jobs:
         uses: OSS-Docs-Tools/code-owner-self-merge@1.6.8
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
