add github member sync

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-totegamma/ @totegamma
+totegamma/ @totegamma #admin
 yu_haruwolf/ @Yu-HaruWolf
 oinarisummer/ @oinarisummer
 adoringonion/ @adoringonion
