--- a/.github/workflows/sync-github-members.yaml
+++ b/.github/workflows/sync-github-members.yaml
@@ -12,6 +12,9 @@ on:
         default: 'false'
         type: boolean
 
+permissions:
+  id-token: write
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
