--- a/.github/workflows/sync-github-members.yaml
+++ b/.github/workflows/sync-github-members.yaml
@@ -39,12 +39,21 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: Terraform Plan
+        if: ${{ github.event.inputs.apply == 'false' }}
+        run: terraform plan
+        working-directory: terraform
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: Terraform Apply
         if: ${{ github.event.inputs.apply == 'true' || github.event_name == 'push' }}
         run: terraform apply -auto-approve
+        working-directory: terraform
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
